[gd_scene load_steps=8 format=3 uid="uid://dmc64kcwg6bw1"]

[ext_resource type="Script" path="res://scripts/option.gd" id="1_qpljg"]
[ext_resource type="Theme" uid="uid://6jnq57qk7v1" path="res://styles/main_menu_button_theme.tres" id="2_8akdq"]
[ext_resource type="StyleBox" uid="uid://cosurp0r4o867" path="res://styles/blue_bg_panel.tres" id="2_o7ipq"]

[sub_resource type="Theme" id="Theme_ha5h0"]

[sub_resource type="SystemFont" id="SystemFont_yk2ju"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_qks7u"]

[sub_resource type="SystemFont" id="SystemFont_q8i3p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qpljg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ha5h0")
theme_override_styles/panel = ExtResource("2_o7ipq")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="BoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 160

[node name="Seperator" type="Control" parent="Panel/MarginContainer/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = SubResource("SystemFont_yk2ju")
theme_override_font_sizes/font_size = 80
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 1

[node name="MouseSens" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8akdq")
theme_override_fonts/font = SubResource("SystemFont_qks7u")
theme_override_font_sizes/font_size = 60
disabled = true
text = "Mouse Sensitivity"

[node name="HSlider" type="HSlider" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.05
max_value = 0.45
step = 0.05
value = 0.25

[node name="Save" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8akdq")
theme_override_fonts/font = SubResource("SystemFont_q8i3p")
theme_override_font_sizes/font_size = 60
text = "Save Game
"

[node name="Load" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8akdq")
theme_override_fonts/font = SubResource("SystemFont_q8i3p")
theme_override_font_sizes/font_size = 60
text = "Load Game
"

[node name="Delete Save Game" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8akdq")
theme_override_fonts/font = SubResource("SystemFont_q8i3p")
theme_override_font_sizes/font_size = 60
text = " Delete Save Game "

[node name="Back" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8akdq")
theme_override_fonts/font = SubResource("SystemFont_q8i3p")
theme_override_font_sizes/font_size = 60
text = "Back
"

[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Delete Save Game" to="." method="_on_delete_save_game_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
